k8s/frontend.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: saas-frontend
  labels:
    app: saas-frontend
spec:
  replicas: 2
  selector:
    matchLabels:
      app: saas-frontend
  template:
    metadata:
      labels:
        app: saas-frontend
    spec:
      containers:
        - name: saas-frontend
          image: obinna27/saas-frontend:v1.0.0
          ports:
            - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: saas-frontend-service
spec:
  selector:
    app: saas-frontend
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: saas-frontend
  annotations:
    kubernetes.io/ingress.class: nginx
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  tls:
    - hosts:
        - saas.natreltherapy.shop
      secretName: saas-app-tls
  rules:
    - host: saas.natreltherapy.shop
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: saas-frontend-service
                port:
                  number: 80
