k8s/ingress.yaml
# ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: SaaS-ingress
  namespace: default
  annotations:
    kubernetes.io/ingress.class: "nginx"
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  tls:
    - hosts:
        - saas.natreltherapy.shop
      secretName: saas-tls
  rules:
    - host: saas.natreltherapy.shop
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: saas-frontend-service
                port:
                  number: 80
